--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@shaggytools/nhtsa-api-wrapper": "^1.1.3",
     "@vue/composition-api": "^0.4.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vee-validate": "^3.2.5"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
