--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server,types,composables --ext js,mjs,json,ts,vue",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server,types,compositions --ext js,mjs,json,ts,vue",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
@@ -45,7 +45,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
-    "vee-validate": "^3.2.5"
+    "vee-validate": "^3.2.5",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
