--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server,types,compositions --ext js,mjs,json,ts,vue",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.ts",
+    "build": "nuxt-ts build",
+    "start": "cross-env NODE_ENV=production ts-node --project 'server/tsconfig.json' server/index.ts",
+    "generate": "nuxt-ts generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest -c ./test/config/jest.config.js",
     "test-watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
-    "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
-    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate"
+    "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts build",
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts generate"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "typescript"
   ],
   "dependencies": {
+    "@nuxt/typescript-runtime": "^0.4.5",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
