--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.1.0",
+    "flush-promises": "^1.0.2",
+    "jest": "^25.3.0",
+    "jest-serializer-vue": "^2.0.2",
     "nodemon": "^1.18.9",
     "nuxt-typed-vuex": "^0.1.17",
     "prettier": "^1.19.1",
