--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "generate": "nuxt-ts generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest -c ./test/config/jest.config.js",
-    "test-watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
+    "test:watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
     "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts build",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts generate"
   },
