chore(scripts) - add jest:watchAll package script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest -c ./test/config/jest.config.js",
     "test:watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
+    "test:watchAll": "jest -c ./test/config/jest.config.js --watchAll",
     "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts build",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts generate"
   },
