refactor(nuxt-server): better nuxt builder and server

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "nuxt-edge": ["../types/nuxt-shim"]
+    }
   }
 }
