--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.ts",
+    "dev": "ts-node --project server/tsconfig.json server/server-dev.ts",
     "build": "nuxt-ts build",
-    "start": "cross-env NODE_ENV=production ts-node --project 'server/tsconfig.json' server/index.ts",
+    "start": "cross-env NODE_ENV=production ts-node --project 'server/tsconfig.json' server/server-prod.ts",
     "generate": "nuxt-ts generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest -c ./test/config/jest.config.js",
@@ -40,40 +40,42 @@
     "typescript"
   ],
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.4.5",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/dotenv": "^1.4.0",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "@shaggytools/nhtsa-api-wrapper": "^1.1.3",
-    "@vue/composition-api": "^0.4.0",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "nuxt": "^2.0.0",
-    "vee-validate": "^3.2.5"
+    "@nuxt/typescript-runtime": "latest",
+    "@nuxtjs/axios": "latest",
+    "@nuxtjs/dotenv": "latest",
+    "@nuxtjs/pwa": "latest",
+    "@shaggytools/nhtsa-api-wrapper": "latest",
+    "@vue/composition-api": "latest",
+    "cross-env": "latest",
+    "express": "latest",
+    "nuxt-edge": "latest",
+    "nuxt-typed-vuex": "latest",
+    "vee-validate": "latest"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
-    "@nuxt/vue-app": "^2.11.0",
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-config-typescript": "^1.0.2",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@nuxtjs/vuetify": "^1.0.0",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "flush-promises": "^1.0.2",
-    "jest": "^25.3.0",
-    "jest-serializer-vue": "^2.0.2",
-    "nodemon": "^1.18.9",
-    "nuxt-typed-vuex": "^0.1.17",
-    "prettier": "^1.19.1",
-    "ts-jest": "^25.2.1",
-    "vue-jest": "^4.0.0-0"
+    "@nuxt/typescript-build": "latest",
+    "@nuxt/vue-app": "latest",
+    "@nuxtjs/eslint-config": "latest",
+    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/eslint-module": "latest",
+    "@nuxtjs/vuetify": "latest",
+    "@types/jest": "latest",
+    "@types/node": "latest",
+    "@vue/test-utils": "latest",
+    "babel-eslint": "latest",
+    "babel-jest": "latest",
+    "chokidar": "latest",
+    "consola": "^2.12.1",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-nuxt": "latest",
+    "eslint-plugin-prettier": "latest",
+    "flush-promises": "latest",
+    "jest": "latest",
+    "jest-serializer-vue": "latest",
+    "latest": "^0.2.0",
+    "prettier": "latest",
+    "ts-jest": "latest",
+    "vue-jest": "latest"
   }
 }
