--- a/package.json
+++ b/package.json
@@ -40,41 +40,41 @@
     "typescript"
   ],
   "dependencies": {
-    "@nuxt/typescript-runtime": "latest",
-    "@nuxtjs/axios": "latest",
-    "@nuxtjs/pwa": "latest",
-    "@shaggytools/nhtsa-api-wrapper": "latest",
-    "@vue/composition-api": "latest",
-    "cross-env": "latest",
-    "express": "latest",
-    "nuxt-edge": "latest",
-    "nuxt-typed-vuex": "latest",
-    "vee-validate": "latest"
+    "@nuxt/typescript-runtime": "2.0.0",
+    "@nuxtjs/axios": "5.12.2",
+    "@nuxtjs/pwa": "3.0.2",
+    "@shaggytools/nhtsa-api-wrapper": "1.1.5",
+    "@vue/composition-api": "1.0.0-beta.11",
+    "cross-env": "7.0.2",
+    "express": "4.17.1",
+    "nuxt-edge": "npm:nuxt-edge",
+    "nuxt-typed-vuex": "0.1.21",
+    "vee-validate": "3.3.9"
   },
   "devDependencies": {
     "@nuxt/types": "npm:@nuxt/types-edge",
-    "@nuxt/typescript-build": "latest",
-    "@nuxt/vue-app": "latest",
-    "@nuxtjs/eslint-config": "latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
-    "@nuxtjs/eslint-module": "latest",
-    "@nuxtjs/vuetify": "latest",
-    "@types/jest": "latest",
-    "@types/node": "latest",
-    "@vue/test-utils": "latest",
-    "babel-eslint": "latest",
-    "babel-jest": "latest",
-    "chokidar": "latest",
-    "consola": "^2.12.1",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-plugin-nuxt": "latest",
-    "eslint-plugin-prettier": "latest",
-    "flush-promises": "latest",
-    "jest": "latest",
-    "jest-serializer-vue": "latest",
-    "prettier": "latest",
-    "ts-jest": "latest",
-    "vue-jest": "latest"
+    "@nuxt/typescript-build": "2.0.3",
+    "@nuxt/vue-app": "2.14.4",
+    "@nuxtjs/eslint-config": "3.1.0",
+    "@nuxtjs/eslint-config-typescript": "3.0.0",
+    "@nuxtjs/eslint-module": "2.0.0",
+    "@nuxtjs/vuetify": "1.11.2",
+    "@types/jest": "26.0.13",
+    "@types/node": "14.6.4",
+    "@vue/test-utils": "1.0.5",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.3.0",
+    "chokidar": "3.4.2",
+    "consola": "2.12.1",
+    "eslint": "7.8.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-nuxt": "1.0.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "flush-promises": "1.0.2",
+    "jest": "26.4.2",
+    "jest-serializer-vue": "2.0.2",
+    "prettier": "2.1.1",
+    "ts-jest": "26.3.0",
+    "vue-jest": "3.0.6"
   }
 }
