--- a/package.json
+++ b/package.json
@@ -55,14 +55,13 @@
     "@nuxt/types": "npm:@nuxt/types-edge",
     "@nuxt/typescript-build": "2.0.3",
     "@nuxt/vue-app": "2.14.4",
-    "@nuxtjs/eslint-config": "3.1.0",
     "@nuxtjs/eslint-config-typescript": "3.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
     "@nuxtjs/vuetify": "1.11.2",
     "@types/jest": "26.0.13",
     "@types/node": "14.6.4",
     "@vue/test-utils": "1.0.5",
-    "babel-eslint": "10.1.0",
+    "babel-core": "6.26.3",
     "babel-jest": "26.3.0",
     "chokidar": "3.4.2",
     "consola": "2.12.1",
@@ -70,6 +69,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-nuxt": "1.0.0",
     "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-vue": "6.2.2",
     "flush-promises": "1.0.2",
     "jest": "26.4.2",
     "jest-serializer-vue": "2.0.2",
