--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
     "test:watchAll": "jest -c ./test/config/jest.config.js --watchAll",
     "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts build",
-    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts generate"
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts generate",
+    "clean-nuxt": "rimraf dist/* && rimraf .nuxt/*"
   },
   "repository": {
     "type": "git",
@@ -52,6 +53,7 @@
     "vee-validate": "3.3.9"
   },
   "devDependencies": {
+    "@babel/core": "7.11.6",
     "@nuxt/types": "npm:@nuxt/types-edge",
     "@nuxt/typescript-build": "2.0.3",
     "@nuxt/vue-app": "2.14.4",
@@ -61,7 +63,7 @@
     "@types/jest": "26.0.13",
     "@types/node": "14.6.4",
     "@vue/test-utils": "1.0.5",
-    "babel-core": "6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "26.3.0",
     "chokidar": "3.4.2",
     "consola": "2.15.0",
@@ -74,6 +76,7 @@
     "jest": "26.4.2",
     "jest-serializer-vue": "2.0.2",
     "prettier": "2.1.1",
+    "rimraf": "3.0.2",
     "ts-jest": "26.3.0",
     "vue-jest": "3.0.6"
   }
