--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@nuxtjs/eslint-config-typescript": "3.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
     "@nuxtjs/vuetify": "1.11.2",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/vue": "5.0.4",
     "@types/jest": "26.0.13",
     "@types/node": "14.6.4",
     "@vue/test-utils": "1.0.5",
