nuxt: switch from @vue to @nuxtjs/composition-api

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/axios": "5.12.3",
     "@nuxtjs/pwa": "3.3.2",
+    "@nuxtjs/composition-api": "0.17.0",
     "@shaggytools/nhtsa-api-wrapper": "1.1.6",
-    "@vue/composition-api": "1.0.0-beta.21",
     "cross-env": "7.0.3",
     "express": "4.17.1",
     "nuxt-edge": "npm:nuxt-edge",
