tests(coverage): add codecov upload job to gh-actions workflows for all branches

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,3 +30,8 @@ jobs:
         yarn lint
         yarn test
         yarn generate:gh-pages
+
+    - name: Upload Coverage
+      uses: codecov/codecov-action@v1
+      with:
+        flags: unittests, master # optional
