--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -5,15 +5,11 @@ name: Development - Lint, Test, and Generate
 
 on:
   push:
-    branches:    
-      - '*'         # matches every branch that doesn't contain a '/'
-      - '*/*'       # matches every branch containing a single '/'
+    branches:
       - '**'        # matches every branch
       - '!master'   # excludes master
   pull_request:
-    branches:    
-      - '*'         # matches every branch that doesn't contain a '/'
-      - '*/*'       # matches every branch containing a single '/'
+    branches:
       - '**'        # matches every branch
       - '!master'   # excludes master
 
@@ -41,3 +37,8 @@ jobs:
         yarn build
         yarn generate
         yarn generate:gh-pages
+
+    - name: Upload Coverage
+      uses: codecov/codecov-action@v1
+      with:
+        flags: unittests, dev # optional
