--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Production - Generate and Deploy to gh-pages
+name: Push Master
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - 'master'
 
 jobs:
-  deploy-to-gh-pages:
+  deployment:
 
     runs-on: ubuntu-20.04
 
@@ -21,15 +21,24 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.4
 
-    - name: Lint, Test, Generate gh-pages build
+    - name: Setup Node and Install Depedencies
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
-        yarn --frozen-lockfile
+    - run: yarn --frozen-lockfile
+
+    - name: Lint and Test
+      run: |
         yarn lint
         yarn test
-        yarn generate:gh-pages
+
+    - name: Generate Github Pages
+      run: yarn generate:gh-pages
+
+    - name: Upload Coverage
+      uses: codecov/codecov-action@v1
+      with:
+        flags: unittests, master, push # optional
 
     - name: Deploy to gh-pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
