--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Development - Lint, Test, and Generate
+name: Push/Pull Development
 
 on:
   push:
@@ -26,19 +26,27 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.4
 
-    - name: Lint, Test, Build, Generate
+    - name: Setup Node and Install Depedencies
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
-        yarn --frozen-lockfile
+    - run: yarn --frozen-lockfile
+
+    - name: Lint and Test
+      run: |
         yarn lint
         yarn test
-        yarn build
-        yarn generate
-        yarn generate:gh-pages
+
+    - name: Build Nuxt
+      run: yarn build
+
+    - name: Generate Nuxt
+      run: yarn generate
+
+    - name: Generate Github Pages
+      run: yarn generate:gh-pages
 
     - name: Upload Coverage
       uses: codecov/codecov-action@v1
       with:
-        flags: unittests, dev # optional
+        flags: unittests, dev, push, pull # optional
