--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Master - Lint, Test, and Generate
+name: Pull Master
 
 on:
   pull_request:
@@ -21,17 +21,21 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.4
 
-    - name: Lint, Test, Generate GH-Pages
+    - name: Setup Node and Install Depedencies
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
-        yarn --frozen-lockfile
+    - run: yarn --frozen-lockfile
+
+    - name: Lint and Test
+      run: |
         yarn lint
         yarn test
-        yarn generate:gh-pages
+
+    - name: Generate Github Pages
+      run: yarn generate:gh-pages
 
     - name: Upload Coverage
       uses: codecov/codecov-action@v1
       with:
-        flags: unittests, master # optional
+        flags: unittests, master, pull # optional
