--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node --project server/tsconfig.json server/server-dev.ts",
-    "build": "yarn clean:nuxt && nuxt-ts build",
-    "start": "cross-env NODE_ENV=production ts-node --project 'server/tsconfig.json' server/server-prod.ts",
-    "generate": "nuxt-ts generate",
+    "dev": "nuxt",
+    "build": "yarn clean:nuxt && nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest -c ./test/config/jest.config.js",
     "test:watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
     "test:watchAll": "jest -c ./test/config/jest.config.js --watchAll",
-    "build:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxt-ts build",
-    "generate:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxt-ts generate",
+    "build:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "clean:nuxt": "rimraf dist/* && rimraf .nuxt/*"
   },
   "repository": {
@@ -40,50 +40,52 @@
     "nuxt",
     "typescript"
   ],
+  "resolutions": {
+    "sass": "~1.32.13"
+  },
   "dependencies": {
-    "@nuxt/typescript-runtime": "2.0.1",
-    "@nuxtjs/axios": "5.12.5",
-    "@nuxtjs/pwa": "3.3.4",
-    "@nuxtjs/composition-api": "0.18.1",
+    "@nuxtjs/axios": "5.13.6",
+    "@nuxtjs/composition-api": "0.24.3",
+    "@nuxtjs/pwa": "3.3.5",
     "@shaggytools/nhtsa-api-wrapper": "1.1.11",
     "cross-env": "7.0.3",
     "express": "4.17.1",
-    "nuxt-edge": "npm:nuxt-edge@2.15.0-26856070.8350560",
-    "nuxt-typed-vuex": "0.1.22",
+    "nuxt-edge": "2.16.0-27048980.cc3f43e1",
+    "nuxt-typed-vuex": "0.2.0",
     "nuxt-webfontloader": "1.1.0",
     "vee-validate": "3.4.5"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/preset-env": "7.12.11",
-    "@nuxt/types": "npm:@nuxt/types-edge@2.15.0-26856070.8350560",
-    "@nuxt/typescript-build": "2.0.3",
-    "@nuxt/vue-app": "2.14.12",
-    "@nuxtjs/eslint-config-typescript": "5.0.0",
-    "@nuxtjs/eslint-module": "3.0.2",
-    "@nuxtjs/vuetify": "1.11.2",
+    "@babel/core": "7.14.3",
+    "@babel/preset-env": "7.14.4",
     "@mdi/js": "5.9.55",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/vue": "5.6.1",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@vue/test-utils": "1.1.2",
+    "@nuxt/types": "npm:@nuxt/types-edge@2.16.0-27048980.cc3f43e1",
+    "@nuxt/typescript-build": "2.1.0",
+    "@nuxt/vue-app": "2.15.6",
+    "@nuxtjs/eslint-config-typescript": "6.0.1",
+    "@nuxtjs/eslint-module": "3.0.2",
+    "@nuxtjs/vuetify": "1.11.3",
+    "@testing-library/jest-dom": "5.13.0",
+    "@testing-library/vue": "5.6.2",
+    "@types/jest": "26.0.23",
+    "@types/node": "14.17.0",
+    "@vue/test-utils": "1.2.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "27.0.2",
     "chokidar": "3.5.1",
-    "consola": "2.15.0",
-    "eslint": "7.18.0",
+    "consola": "2.15.3",
+    "eslint": "7.28.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "7.10.0",
     "flush-promises": "1.0.2",
-    "jest": "26.6.3",
-    "jest-localstorage-mock": "2.4.6",
+    "jest": "27.0.4",
+    "jest-localstorage-mock": "2.4.14",
     "jest-serializer-vue": "2.0.2",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "ts-jest": "26.4.4",
+    "ts-jest": "27.0.3",
     "vue-jest": "3.0.7"
   }
 }
