--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "typescript"
   ],
   "resolutions": {
-    "sass": "~1.34.0"
+    "sass": "1.32.12"
   },
   "dependencies": {
     "@nuxtjs/axios": "5.13.6",
