feature: most setup completed for nuxt-3 switch, client side hydration broken, maybe vuetify?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "jestrunner.configPath": "/test/config/jest.config.js"
+  "jestrunner.configPath": "/test/config/jest.config.js",
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint"
 }
