--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "nuxt",
-    "build": "yarn clean:nuxt && nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi preview",
+    "generate": "nuxi generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest -c ./test/config/jest.config.js",
     "test:watch": "jest -c ./test/config/jest.config.js --watch --onlyChanged",
     "test:watchAll": "jest -c ./test/config/jest.config.js --watchAll",
-    "build:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxt build",
-    "generate:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
-    "clean:nuxt": "rimraf dist/* && rimraf .nuxt/*"
+    "build:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxi build",
+    "generate:gh-pages": "yarn clean:nuxt && cross-env DEPLOY_ENV=GH_PAGES nuxi build",
+    "clean:nuxt": "rimraf dist/* && rimraf .nuxt/* && rimraf .output/*"
   },
   "repository": {
     "type": "git",
@@ -42,11 +42,10 @@
   ],
   "dependencies": {
     "@nuxtjs/axios": "5.13.6",
-    "@nuxtjs/composition-api": "0.31.0",
-    "@shaggytools/nhtsa-api-wrapper": "2.0.2",
+    "@shaggytools/nhtsa-api-wrapper": "2.0.3",
     "cross-env": "7.0.3",
     "express": "4.17.2",
-    "nuxt-edge": "2.16.0-27338416.777a4b7f",
+    "nuxt-edge": "2.16.0-27347055.777a4b7f",
     "nuxt-typed-vuex": "0.2.0",
     "nuxt-webfontloader": "1.1.0",
     "vee-validate": "3.4.14"
@@ -55,8 +54,8 @@
     "@babel/core": "7.16.5",
     "@babel/preset-env": "7.16.5",
     "@mdi/js": "6.5.95",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxt/types": "npm:@nuxt/types-edge@2.16.0-27338416.777a4b7f",
-    "@nuxt/typescript-build": "2.1.0",
     "@nuxt/vue-app": "2.15.8",
     "@nuxtjs/eslint-config-typescript": "8.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
@@ -64,8 +63,9 @@
     "@nuxtjs/vuetify": "1.12.3",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/vue": "5.8.2",
-    "@types/jest": "27.0.3",
+    "@types/jest": "27.4.0",
     "@types/node": "16.11.17",
+    "@vue/runtime-dom": "^3.2.26",
     "@vue/test-utils": "1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "27.4.5",
@@ -83,6 +83,7 @@
     "prettier": "2.5.1",
     "rimraf": "3.0.2",
     "ts-jest": "27.1.2",
+    "typescript": "^4.5.4",
     "vue-jest": "3.0.7"
   }
 }
